deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paldo-fe
  labels:
    app: paldo-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paldo-fe
  template:
    metadata:
      labels:
        app: paldo-fe
    spec:
      containers:
      - name: paldo-fe
        image: xlalfskdl/paldo-fe:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
