deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paldo-fe
spec:
  ports:
  - port: 8000
  selector:
    app: paldo-fe
