deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paldo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: tls-secret
  rules:
    - host: paldo.169.56.174.130.nip.io
    - http:
        paths:
          # - path: /moneymany
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paldo-fe
                port:
                  number: 8000
          - path: /portfolio-service
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 8001
